02/06/2022 v.0.42 Neha
	[ZB-8782] Owner Credit Note

26/05/2022 v.0.41 Neha
	[ZB-8671] JV entries/Vendor invoice Adjustment

28/04/2022 v.0.40 shilpa mariya
	[ZB-8169] Advance Expenses Adjustment

14/04/2022 v.0.39 Neha
	[ZB-8169] Advance Expenses Adjustment

03/03/2022 v.0.38 Neha
	Register payment error

01/03/2022 v.0.37 Neha
	[ZB-8029] Payment Voucher Report Issue

18/02/2022 v.0.36 Neha
	Payment lines loading for opening balance

30/12/2021 v.0.35 Neha
	[ZB-7764] Allocation amount error

29/12/2021 v.0.34 Neha
	[ZB-7764] Allocation amount error

28/12/2021 v.0.33 Neha
	[ZB-7753] Payment Advise Sorting

27/12/2021 v.0.32 Neha
	[ZB-7603] Payment Advise Functionality Upgrade

17/12/2021 v.0.31 Neha
	[ZB-7598] Tenant Advance Payment Transfer

16/12/2021 v.0.30 Neha
	Customer Receipt Sequence Issue

Version 0.29 - 20/09/2021 by Neha
	[ZB-7013] Bldg / Unit in Customer Invoices

Version 0.28 - 27/08/2021 by Neha
	Payment adjustment journal entry sequence issue

Version 0.27 - 16/08/2021 by Neha
	Payment adjustment sequence issue

Version 0.26 - 10/08/2021 by Neha
	[ZB-6729] customer payment : field reset issue

Version 0.25 - 09/08/2021 by Neha
	payment advise correction

Version 0.24 - 16/07/2021 by PV
	Advance Expense Entries and Calculation in Payment Voucher.
	
Version 0.23 - 05/05/2021 by Neha
	6003 - Feedback

Version 0.22 - 04/05/2021 by Neha
	Removed Full reconcile id in PA

Version 0.21 - 03/05/2021 by Neha
	Full reconcile id in PA

Version 0.20 - 01/05/2021 by PV
	PA Partial reconciliation Changes
	
Version 0.19 - 30/04/2020 by Neha
	PA-payment lines correction

Version 0.18 - 24/12/2020 by Dayana
	Payment line ids  -lines visible depends on  flats in payment

Version 0.17 - 21/12/2020 by Dayana
	amount in account.payment calculation

Version 0.16 - 15/12/2020 by Dayana
	error solved in confirming payments

Version 0.15 - 15/12/2020 by Dayana
	* remove the total from allocation and addded total for debit and credit in pyament lines ids of account.payment
	