@@ -1,3 +1,6 @@
+17/06/2022 v.0.43 Neha
+	[ZB-8671] JV entries/Vendor invoice Adjustment
+
 02/06/2022 v.0.42 Neha
 	[ZB-8782] Owner Credit Note
 
